SECURITY: Remove sensitive .env file and add .gitignore
- Removed .env file containing hardcoded passwords
- Added .gitignore to prevent future sensitive file commits
- Updated .env.example with placeholder values
- Fixed security vulnerability

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,53 @@
 # Jasmin SMS Gateway Environment Configuration
+# Copy this file to .env and modify as needed
 
-# HTTP API Configuration
+# Core networking / exposure
 JASMIN_HTTP_PORT=1401
 JASMIN_JCLI_PORT=8990
 JASMIN_SMPP_PORT=2775
 
-# RabbitMQ Configuration
-RABBITMQ_MGMT_PORT=15672
-RABBITMQ_DEFAULT_USER=admin
-RABBITMQ_DEFAULT_PASS=admin
-
-# Redis Configuration
+# Docker internal hostnames (services share a network)
 REDIS_HOST=redis
-REDIS_PORT=6379
+RABBITMQ_HOST=rabbitmq
 
-# Jasmin Configuration
-REDIS_CLIENT_HOST=redis
-AMQP_BROKER_HOST=rabbit-mq
+# RabbitMQ management (optional external)
+RABBITMQ_MGMT_PORT=15692
 
-# Security (Change these in production!)
-JCLI_ADMIN_USER=jcliadmin
-JCLI_ADMIN_PASS=jclipwd
-
-# Optional: Custom domain
+# Optional domain / external base URL (placeholder)
 PUBLIC_BASE_URL=http://localhost
+
+# Default HTTP API test user (CHANGE THESE IN PRODUCTION!)
+HTTP_TEST_USERNAME=your_username
+HTTP_TEST_PASSWORD=your_secure_password
+
+# Optional SMPP connector placeholders (no real binding by default)
+# Set SMPP_HOST to a real IP to enable SMPP connector creation
+SMPP_CID=DEMO_CONNECTOR
+SMPP_HOST=your_smpp_host
+SMPP_PORT=2775
+SMPP_USERNAME=your_smpp_username
+SMPP_PASSWORD=your_smpp_password
+SMPP_THROUGHPUT=100
+
+# Monitoring toggles (used in docs)
+ENABLE_MONITORING=false
+
+# Resource limits (can be tuned)
+JASMIN_CPU=1
+JASMIN_MEM=512m
+RABBITMQ_CPU=0.5
+RABBITMQ_MEM=512m
+REDIS_CPU=0.2
+REDIS_MEM=256m
+PROM_CPU=0.2
+PROM_MEM=256m
+GRAFANA_CPU=0.5
+GRAFANA_MEM=256m
+
+# Grafana configuration (CHANGE IN PRODUCTION!)
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=change_this_password
+GRAFANA_PORT=3000
+
+# Prometheus configuration
+PROMETHEUS_PORT=9090
