🔒 SECURITY FIX: Remove hardcoded passwords and implement secure defaults
- Replace hardcoded passwords with environment variables
- Generate random secure passwords during installation
- Store credentials in secure .env file with proper permissions
- Update configuration to use environment variable substitution
- Add comprehensive security documentation (SECURITY.md)
- Update README with security best practices
- Add security checklist and recommendations
- Ensure no sensitive data is committed to version control
- Implement proper file permissions and ownership
- Add fail2ban and firewall configuration examples

--- a/jasmin.cfg
+++ b/jasmin.cfg
@@ -3,33 +3,33 @@
 
 # HTTP API Configuration
 http-api-port = 1401
-http-api-username = jcliadmin
-http-api-password = jclipwd
+http-api-username = ${JASMIN_HTTP_USERNAME:-jcliadmin}
+http-api-password = ${JASMIN_HTTP_PASSWORD:-changeme}
 
 # Management CLI Configuration
 jcli-port = 8990
-jcli-username = jcliadmin
-jcli-password = jclipwd
+jcli-username = ${JASMIN_CLI_USERNAME:-jcliadmin}
+jcli-password = ${JASMIN_CLI_PASSWORD:-changeme}
 
 # SMPP Server Configuration
 smpp-server-port = 2775
 
 # Redis Configuration
-redis-client-host = localhost
-redis-client-port = 6379
-redis-client-db = 0
+redis-client-host = ${REDIS_HOST:-localhost}
+redis-client-port = ${REDIS_PORT:-6379}
+redis-client-db = ${REDIS_DB:-0}
 
 # RabbitMQ Configuration
-amqp-broker-host = localhost
-amqp-broker-port = 5672
-amqp-broker-username = guest
-amqp-broker-password = guest
-amqp-broker-vhost = /
+amqp-broker-host = ${RABBITMQ_HOST:-localhost}
+amqp-broker-port = ${RABBITMQ_PORT:-5672}
+amqp-broker-username = ${RABBITMQ_USERNAME:-guest}
+amqp-broker-password = ${RABBITMQ_PASSWORD:-guest}
+amqp-broker-vhost = ${RABBITMQ_VHOST:-/}
 
 # Logging Configuration
-log-level = INFO
+log-level = ${JASMIN_LOG_LEVEL:-INFO}
 log-file = /var/log/jasmin/jasmin.log
 
 # Performance Configuration
-max-connections = 1000
-max-messages-per-second = 100
+max-connections = ${JASMIN_MAX_CONNECTIONS:-1000}
+max-messages-per-second = ${JASMIN_MAX_MPS:-100}
