--- a/jasmin-minimal-no-amqp.cfg
+++ b/jasmin-minimal-no-amqp.cfg
@@ -6,14 +6,14 @@
 bind = 0.0.0.0
 port = 1401
 username = jcliadmin
-password = jclipwd
+password = ${JASMIN_HTTP_PASSWORD:-changeme}
 
 # Management CLI Configuration
 [jcli]
 bind = 0.0.0.0
 port = 8990
 username = jcliadmin
-password = jclipwd
+password = ${JASMIN_HTTP_PASSWORD:-changeme}
 
 # Redis Configuration
 [redis-client]
