--- a/jasmin-system.cfg
+++ b/jasmin-system.cfg
@@ -6,14 +6,14 @@
 bind = 0.0.0.0
 port = 1401
 username = jcliadmin
-password = jclipwd
+password = ${JASMIN_HTTP_PASSWORD:-changeme}
 
 # Management CLI Configuration
 [jcli]
 bind = 0.0.0.0
 port = 8990
 username = jcliadmin
-password = jclipwd
+password = ${JASMIN_HTTP_PASSWORD:-changeme}
 
 # Redis Configuration
 [redis-client]
@@ -26,7 +26,7 @@ db = 0
 host = localhost
 port = 5672
 username = admin
-password = admin123
+password = ${RABBITMQ_PASSWORD:-changeme}
 vhost = /
 spec = /etc/jasmin/resource/amqp0-9-1.xml
 
