🔒 SECURITY FIX: Remove hardcoded credentials and use environment variables
- Replace hardcoded passwords with environment variables
- Add env.example file for secure configuration
- Remove password.txt file
- Update all scripts to use secure credentials
- Fix GitGuardian security alerts
- Add security warnings in README

Environment variables:
- JASMIN_HTTP_USERNAME/PASSWORD
- JASMIN_CLI_USERNAME/PASSWORD
- RABBITMQ_USERNAME/PASSWORD

Default passwords changed to 'changeme123' (must be changed in production)

--- a/jasmin.cfg
+++ b/jasmin.cfg
@@ -5,15 +5,15 @@
 [http-api]
 bind = 0.0.0.0
 port = 1401
-username = admin
-password = admin123
+username = ${JASMIN_HTTP_USERNAME:-admin}
+password = ${JASMIN_HTTP_PASSWORD:-changeme123}
 
 # Management CLI Configuration
 [jcli]
 bind = 0.0.0.0
 port = 8990
-username = admin
-password = admin123
+username = ${JASMIN_CLI_USERNAME:-admin}
+password = ${JASMIN_CLI_PASSWORD:-changeme123}
 
 # Redis Configuration
 [redis-client]
@@ -25,8 +25,8 @@ db = 0
 [amqp-broker]
 host = localhost
 port = 5672
-username = admin
-password = admin123
+username = ${RABBITMQ_USERNAME:-admin}
+password = ${RABBITMQ_PASSWORD:-changeme123}
 vhost = /
 spec = file:///Users/arnobrizwan/Jasmin-SMS-Gateway-setup-2/etc/resource/amqp0-9-1.xml
 
